// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaRugbyStandings should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH ibauhN"
  >
    <div
      class="sc-bxivhb sc-ifAKCX dkbwhp"
    />
    <div
      class="sc-htpNat inAUId"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaRugbyStandings should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH hECBFg"
  >
    <div
      class="sc-bxivhb sc-ifAKCX dkbwhp"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
